undefine HAVE_MEMALIGN before compiling mdb.c

This branch undefines _HAVE_MEMALIGN_, as mdb.c expects it to be undefined and calls `memalign()` without including alloc.h if it's defined in the environment, even if _HAVE_POSIX_MEMALIGN_ is also defined; and unfortunately some build environments define _HAVE_MEMALIGN_ even if they _HAVE_POSIX_MEMALIGN_ (per https://bugzilla.mozilla.org/show_bug.cgi?id=1512541), which triggers an implicit function declaration and linker bustage on some systems.

We undefine _HAVE_MEMALIGN_ by including a header file rather than setting a compiler flag (`-UHAVE_MEMALIGN`) because the aforementioned build environment defines it via a header file (mozilla-config.h), which would override the command-line flag.